--- a/exercises/3/index.html
+++ b/exercises/3/index.html
@@ -1,21 +1,20 @@
 <!doctype html>
 <html>
   <head>
-    <title>Timer example</title>
-    <link href="style.css" rel="stylesheet" />
+    <title>Classes Exercise - instantiation</title>
+    <link rel="stylesheet" type="text/css" href="../jasmine/lib/jasmine-2.0.0/jasmine.css">
+    <script type="text/javascript" src="../jasmine/lib/jasmine-2.0.0/jasmine.js"></script>
+    <script type="text/javascript" src="../jasmine/lib/jasmine-2.0.0/jasmine-html.js"></script>
+    <script type="text/javascript" src="../jasmine/lib/jasmine-2.0.0/boot.js"></script>
   </head>
   <body>
     <header>
-      <h1>Timer</h1>
-      <h2>This is an app that allows you to track your time simply and easily</h2>
+      <h1>Classes Exercise - instantiation</h1>
+      <p>A class has been written named window.WeekDay use this class to pass the tests below</p>
     </header>
-    <section class="form">
-      <input class="titleInput" />
-      <a href="#" class="new-timer btn">new timer</a>
-    </section>
-    <section class="timer_list">
-    </section>
     <script src="jquery.js"></script>
-    <script src="script.js"></script>
+    <script>window.nordev = {};</script>
+    <script src="sample_script.js"></script>
+    <script src="spec.js"></script>
   </body>
 </html>
