exercises added along with complete and incomplete timelord app

--- a/exercises/1/index.html
+++ b/exercises/1/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <h1>Singleton Exercise - creation</h1>
-      <h2>The following tests expect a singleton to be available in the namespace nordev which responds to the following methods.</h2>
+      <p>The following tests expect a singleton to be available in the namespace nordev which responds to the following methods.</p>
     </header>
     <script src="jquery.js"></script>
     <script>window.nordev = {};</script>
