--- a/exercises/2/index.html
+++ b/exercises/2/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <h1>Classes Exercise - Creation</h1>
-      <h2>The tests below expect a class called Car to be created who's instances have public methods and data attributes.</h2>
+      <p>The tests below expect a class called Car to be created who's instances have public methods and data attributes.</p>
     </header>
     <script src="jquery.js"></script>
     <script>window.nordev = {};</script>
