--- a/exercises/5/index.html
+++ b/exercises/5/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <h1>Events - triggering</h1>
-      <h2>This is an app that allows you to track your time simply and easily</h2>
+      <p>The tests below expect specific events to be triggerred with matching data types</p>
     </header>
     <script src="jquery.js"></script>
     <script>window.nordev = {};</script>
