--- a/exercises/3/index.html
+++ b/exercises/3/index.html
@@ -14,6 +14,7 @@
     </header>
     <script src="jquery.js"></script>
     <script>window.nordev = {};</script>
+    <script src="weekday.js"></script>
     <script src="sample_script.js"></script>
     <script src="spec.js"></script>
   </body>
