copy changes for talk and console log taken out of slides

--- a/talk/index.html
+++ b/talk/index.html
@@ -13,7 +13,7 @@
         <li>
           We will be learning some sensible ways to structure Javascript.
         </li>
-        <li>This course Assumes some programming/ Javascript experience.</li>
+        <li>This course assumes some programming/ Javascript experience.</li>
         <li>These are design patterns I use regularly in my work and have found them useful</li>
         <li>Other methods exist, please learn them find one that fits your problem best!</li>
       </ul>
@@ -22,7 +22,7 @@
       <h2>Structure of this afternoon</h2>
       <ul>
         <li>A talk (this one)</li>
-        <li>Some live coding (eek!)</li>
+        <li>Step through the anatomy of an app.</li>
         <li>Some exercises to go though</li>
         <li>A Q and A session</li>
         <li>Please ask questions throughout!</li>
@@ -88,12 +88,12 @@
       </ul>
     </section>
     <section>
-      <h2>Now for some live coding!</h2>
+      <h2>Step through Timelord</h2>
       <ul>
-        <li>I'll be using the principles above to creat a client side timer app</li>
-        <li>feel free to code along with the incomple_timelord folder</li>
+        <li>I'll be using the principles above to step through a client side timer app</li>
+        <li>feel free to follow along with the incomple_timelord folder</li>
         <li>I've already written the html and CSS for this feel free to review afterwards</li>
-        <li></li>
+        <li>Feel free to use and extend timelord to practice your JS!</li>
       </ul>
     </section>
   </body>
