--- a/exercises/4/index.html
+++ b/exercises/4/index.html
@@ -14,7 +14,7 @@
     </header>
     <script src="jquery.js"></script>
     <script>window.nordev = {};</script>
-    <script src="sample_script.js"></script>
+    <script src="script.js"></script>
     <script src="spec.js"></script>
   </body>
 </html>
